== 2.1.0

* Major enhancement
  * Added support for functions (not class methods).
  * Anonymous union support.
  * Added support for Callbacks from C++.
  * Added support for pseudo-attributes (get/set methods).

* Minor enhancement
  * Should not add namespace to typedef of template in namespace.
  * Should check doxygen header versions.
  * Should create cast for unresolved templated parents.
  * Added 'ignore' setting for parser.
  * Ignoring 'struct' keyword in param (C++ name scoping rules apply).
  * Casting enum types to 'int' instead of double.
  * Added 'extra_headers' option to binder.
  * Fixed bug with unamed method parameters (Tim Mensch).
  * Fixed bug with void parameter (Tim Mensch).
  * Fixed bug where lua stack would grow during class registration (Tim Mensch).
  * Added 'attr_name_filter' to rename attributes.
  * Removed 'yaml' dependency and changed @dub options format.
  * Binding all classes now works inside a namespace.

== 2.0.0 2012-01-21
* Complete rewrite in Lua
  * Most of the previous features are there (but not all).
  * Added support for attributes read/write.
  * Garbage collection protection for pointers.
  * Return value optimization.
  * Garbage collection optimization (an idea from Tim Mensch).
  * Doxygen parsing (no need to provide xml).
  * Added support for nested classes and namespaces.
  * Added support for custom bindings on attributes.
  * Added 'Doxyfile' option on inspector to allow custom Doxyfile.
  * Added support for void *userdata to store Lua types.
  * Added support for transparent native table wrapping.
  * Added support for abstract types and casting to these types.
  * ...

== 1.1

* Minor enhancement
  * We can omit 'return 0' when defining body with yaml.
  * Automatically uses luaDestroy with subclassed with LuaObject.
  * Fixed 'deleted' method (should be present when we use LuaObject).

== 1.0.0

* Major enhancement
  * Support for yaml definition of binding body.